--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
     <link href="./assets/app.css" rel="stylesheet">
 </head>
 <body ng-cloak=""> 
-    <div ng-controller="mainController as main">
-	    <div ng-show="main.front" class="hide-typing">
+    <div layout-fill layout="column" ng-controller="mainController as main" >
+	    <div flex="70" ng-show="main.front" class="hide-typing">
             <div class="typing">
                 <span class="element"></span> <span class=
                 "typed-cursor"></span>
 	    </div>
         </div>
         <div>
-            <div class="down-icon" layout="row" layout-align="center end">
+		<div flex layout="row" layout-align="center center">
+            <div class="down-icon">
                 <div class="bounce">
                     <i class="fa fa-chevron-circle-down fa-5x" ng-click=
                     "main.front=!main.front"></i>
                 </div>
             </div>
         </div>
+	</div>
     </div>
     <!--<div ng-show="!main.front" ng-click="main.front = !main.front" layout="row" layout-align="center end" class="box-one">
 	    <p style="color:white">hello</p>
