--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 </head>
 <body ng-cloak=""> 
     <div layout-fill layout="column" ng-controller="mainController as main" >
-	    <div flex="70" ng-show="main.front" class="hide-typing">
+	    <div ng-show="main.front" class="size"> 
+	    <div ng-show="main.front" class="hide-typing">
             <div class="typing">
                 <span class="element"></span> <span class=
                 "typed-cursor"></span>
 	    </div>
         </div>
-        <div>
-		<div flex layout="row" layout-align="center center">
+	    </div>
+		<div flex layout="row" layout-align="center center" ng-show="main.front" class="to-loader">
             <div class="down-icon">
                 <div class="bounce">
                     <i class="fa fa-chevron-circle-down fa-5x" ng-click=
@@ -35,10 +36,10 @@
                 </div>
             </div>
         </div>
-	</div>
 
-  <div hide show-gt-md flex ng-hide="main.front" class="loader"> 
-    <div class="loader--dot"><img src="http://arverma.me/img/mainImage.jpg"></im></div>
+  <div hide show-gt-md flex ng-show="!main.front" class="loader-delay"> 
+	  <div hide show-gt-md flex class="loader">
+    <div class="loader--dot"><img src="http://arverma.me/img/mainImage.jpg"></img></div>
      <div class="loader--dot"><i class="logo lightcolor ultradarkbgcolor fa fa-github"></i></div>
     <div class="loader--dot"><i class="fa fa-linkedin"></i></div>
     <div class="loader--dot"><i class="fa fa-envelope"></i></div>
@@ -46,7 +47,7 @@
      
   </div>
 
-
+  </div>
     </div>
     <!--<div ng-show="!main.front" ng-click="main.front = !main.front" layout="row" layout-align="center end" class="box-one">
 	    <p style="color:white">hello</p>
