--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>The Personal Webpage of Akshay Verma</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel=
     "stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css" rel="stylesheet">
+    <script href="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
     <link crossorigin="anonymous" href=
     "https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
     integrity=
@@ -16,6 +20,7 @@
     <link href=
     "https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.1/angular-material.min.css"
     rel="stylesheet">
+    <!--<script href="https://cdnjs.cloudflare.com/ajax/libs/viewport-units-buggyfill/0.6.0/viewport-units-buggyfill.hacks.js"></script>-->
     <link href="./assets/app.css" rel="stylesheet">
 </head>
 <body ng-cloak=""> 
@@ -35,15 +40,15 @@
                     "main.front=!main.front"></i>
                 </div>
             </div>
-        </div>
+		</div>
 
   <div hide show-gt-md flex ng-show="!main.front" class="loader-delay"> 
-	  <div hide show-gt-md flex class="loader">
-    <div class="loader--dot"><img src="http://arverma.me/img/mainImage.jpg"></img></div>
-     <div class="loader--dot"><i class="logo lightcolor ultradarkbgcolor fa fa-github"></i></div>
-    <div class="loader--dot"><i class="fa fa-linkedin"></i></div>
-    <div class="loader--dot"><i class="fa fa-envelope"></i></div>
-    <div class="loader--dot"><i class="fa fa-file-pdf-o"></i></div>
+	  <div hide show-gt-md flex class="loader" layout="column" layout-align"center stretch">
+		  <div class="loader--dot"><img src="http://arverma.me/img/mainImage.jpg"></img><span>About Me</span></div>
+		  <div class="loader--dot"><a href="http://github.com/arvvvs"><i class="logo lightcolor ultradarkbgcolor fa fa-github"></i></a><span> Github</span></div>
+		  <div class="loader--dot"><a ng-href="http://www.linkedin.com/in/akshay-verma-8a5b7553"><i class="fa fa-linkedin"></i></a><span>LinkedIn</span></div>
+		  <div class="loader--dot"><a ng-href="mailto:averma2@binghamton.edu"><i class="fa fa-envelope"></i></a><span>Email Me!</span></div>
+		  <div class="loader--dot"><a ng-href="./dist/views/resume.pdf"><i class="fa fa-file-pdf-o"></i></a><span> Resume</span></div>
      
   </div>
 
@@ -74,8 +79,6 @@
     <script src="./node_modules/angular-aria/angular-aria.js">
     </script> 
     <script src="./node_modules/angular-material/angular-material.js">
-    </script> 
-    <script src="./angular-typewrite/scripts/scripts.js">
     </script> 
     <script src="./dist/controllers/maincontroller.js">
     </script> 
