making things look nicer and img

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <div hide show-gt-md flex ng-show="!main.front" class="loader-delay"> 
 	  <div hide show-gt-md flex class="loader" layout="column" layout-align"center stretch">
-		  <div class="loader--dot"><img src="http://arverma.me/img/mainImage.jpg"></img><span>About Me</span></div>
+		  <div class="loader--dot"><img src="./assets/img/mainImage.jpg"></img><span>About Me</span></div>
 		  <div class="loader--dot"><a href="http://github.com/arvvvs"><i class="logo lightcolor ultradarkbgcolor fa fa-github"></i></a><span> Github</span></div>
 		  <div class="loader--dot"><a ng-href="http://www.linkedin.com/in/akshay-verma-8a5b7553"><i class="fa fa-linkedin"></i></a><span>LinkedIn</span></div>
 		  <div class="loader--dot"><a ng-href="mailto:averma2@binghamton.edu"><i class="fa fa-envelope"></i></a><span>Email Me!</span></div>
@@ -54,14 +54,6 @@
 
   </div>
     </div>
-    <!--<div ng-show="!main.front" ng-click="main.front = !main.front" layout="row" layout-align="center end" class="box-one">
-	    <p style="color:white">hello</p>
-    </div>
-<button ng-click="main.front = !main.front">Toggle Box One</button>
-    
-    <div class="box-one" ng-show="main.front">
-      Hello! I am <b>box one</b>.
-    </div>-->
     <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-animate.min.js"></script>
         <script src="./node_modules/angular-aria/angular-aria.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
