--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
     rel="stylesheet">
     <link href="./assets/app.css" rel="stylesheet">
 </head>
-<body ng-cloak=""> 
+<body> 
     <div layout-fill layout="column" ng-controller="mainController as main" >
+	    <div class="splash" ng-cloak="">
+		    <md-progress-circular md-diameter="96"></md-progress-circular> 
+	    </div>
+	    <div ng-cloak="">
 	    <div ng-show="main.front" class="size"> 
 	    <div ng-show="main.front" class="hide-typing">
             <div class="typing">
@@ -52,6 +56,7 @@
 
   </div>
     </div>
+    </div>
     <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-animate.min.js"></script>
         <script src="./node_modules/angular-aria/angular-aria.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
@@ -62,14 +67,19 @@
     <script src=
     "https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js">
     </script> 
-    <script src="./node_modules/angular/angular.js">
-    </script> 
-    <script src="./node_modules/angular-animate/angular-animate.js">
-    </script> 
-    <script src="./node_modules/angular-aria/angular-aria.js">
-    </script> 
-    <script src="./node_modules/angular-material/angular-material.js">
-    </script> 
+    <!--<script src="./node_modules/angular/angular.js">
+    </script>--> 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <!--<script src="./node_modules/angular-animate/angular-animate.js">
+    </script>-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-animate.min.js"></script>
+    <!--<script src="./node_modules/angular-aria/angular-aria.js">
+    </script>--> 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-aria.js"></script>
+    <!--<script src="./node_modules/angular-material/angular-material.js">
+    </script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.js"></script>
+
     <script src="./dist/controllers/maincontroller.js">
     </script> 
     <script src="./dist/boot.js">
