--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
 		</div>
 
-  <div hide show-gt-md flex ng-show="!main.front" class="loader-delay"> 
-	  <div hide show-gt-md flex class="loader" layout="column" layout-align"center stretch">
+  <div flex ng-show="!main.front" class="loader-delay"> 
+	  <div class="loader" layout="column" layout-align"center stretch">
 		  <div class="loader--dot"><img src="./assets/img/mainImage.jpg"></img><span>About Me</span></div>
 		  <div class="loader--dot"><a href="http://github.com/arvvvs"><i class="logo lightcolor ultradarkbgcolor fa fa-github"></i></a><span> Github</span></div>
 		  <div class="loader--dot"><a ng-href="http://www.linkedin.com/in/akshay-verma-8a5b7553"><i class="fa fa-linkedin"></i></a><span>LinkedIn</span></div>
