scroll down triggers event y

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body ng-cloak=""> 
     <div layout-fill layout="column" ng-controller="mainController as main" >
-	    <div show="main.front" class="size"> 
+	    <div show="main.front" id="angular-front" class="size"> 
 	    <div ng-show="main.front" class="hide-typing">
             <div class="typing">
                 <span class="element"></span> <span class=
