--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="theme-color" content="black">
     <title>The Personal Webpage of Akshay Verma</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel=
     "stylesheet">
