--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="" name="description">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="theme-color" content="black">
     <title>The Personal Webpage of Akshay Verma</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel=
@@ -17,22 +16,22 @@
     integrity=
     "sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
     rel="stylesheet">
-    <link href=
+
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <!--<link href=
     "https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.1/angular-material.min.css"
-    rel="stylesheet">
+    rel="stylesheet">--> 
     <link href="./assets/app.css" rel="stylesheet">
-</head>
-<body ng-cloak=""> 
-    <div layout-fill layout="column" ng-controller="mainController as main" >
-	    <div show="main.front" id="angular-front" class="size"> 
+    <body ng-cloak="" ng-controller="mainController as main">
+	    <header class="header">
 	    <div ng-show="main.front" class="hide-typing">
             <div class="typing">
                 <span class="element"></span> <span class=
                 "typed-cursor"></span>
 	    </div>
         </div>
-	    </div>
-		<div flex layout="row" layout-align="center center" ng-show="main.front" class="to-loader">
+	</div>
+		<div class="to-loader" ng-show="main.front">
             <div class="down-icon">
                 <div class="bounce">
                     <i class="fa fa-chevron-circle-down fa-5x" ng-click=
@@ -40,19 +39,12 @@
                 </div>
             </div>
 		</div>
-
-  <div hide show-gt-sm flex ng-show="!main.front" class="loader-delay"> 
-	  <div hide show-gt-sm flex class="loader" layout="column" layout-align"center stretch">
-		  <div class="loader--dot"><img src="./assets/img/mainImage.jpg"></img><span>About Me</span></div>
-		  <div class="loader--dot"><a href="http://github.com/arvvvs"><i class="logo lightcolor ultradarkbgcolor fa fa-github"></i></a><span> Github</span></div>
-		  <div class="loader--dot"><a ng-href="http://www.linkedin.com/in/akshay-verma-8a5b7553"><i class="fa fa-linkedin"></i></a><span>LinkedIn</span></div>
-		  <div class="loader--dot"><a ng-href="mailto:averma2@binghamton.edu"><i class="fa fa-envelope"></i></a><span>Email Me!</span></div>
-		  <div class="loader--dot"><a ng-href="./dist/views/resume.pdf"><i class="fa fa-file-pdf-o"></i></a><span> Resume</span></div>
-     
+	  <div ng-show="!main.front" ng-include="'./dist/views/landing.html'">
   </div>
-
-  </div>
-    </div>
+	    </header>
+	    <div ng-show="!main.front" class="AboutMe">
+		    <span class="about-me">> About Me</span><span class="about-me-cursor"> &#9608</span> 
+	    </div>
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
     </script> 
@@ -70,20 +62,21 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-aria.js"></script>
     <!--<script src="./node_modules/angular-material/angular-material.js">
     </script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.js"></script>
+    -->
 
     <script src="./dist/controllers/maincontroller.js">
     </script> 
     <script src="./dist/boot.js">
     </script>
  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!--<script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-51524790-1');ga('send','pageview');
-        </script>
+	</script>-->
 </body>
 </html>
