adding stuff removed angular material

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     "sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
     rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
     <!--<link href=
     "https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.1/angular-material.min.css"
     rel="stylesheet">--> 
@@ -43,7 +43,13 @@
   </div>
 	    </header>
 	    <div ng-show="!main.front" class="AboutMe">
-		    <span class="about-me">> About Me</span><span class="about-me-cursor"> &#9608</span> 
+		    <span class="about-me">arverma.me:~/$ whoami</span><span class="about-me-cursor"> &#9608</span> 
+		    <div class="about-me-content">
+		    <h2>Developer, person who created this website, and enjoyer of good and spicy foods</h2>
+		    <p>*Occasional long distance runner, reader, and avid scifi fan<p>
+		    <br />
+		    <p>I started coding when I picked up books from my local library on coding.  I learnt basic HTML and C++ from those books, but unfortunately due to high school I was unable to carry on.</p>
+		    </div>
 	    </div>
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
