fixed now to merg

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 		    <h2>Developer, person who created this website, and enjoyer of good and spicy foods</h2>
 		    <p>*Occasional long distance runner, reader, and avid scifi fan<p>
 		    <br />
-		    <p>I started coding when I picked up books from my local library on coding.  I learnt basic HTML and C++ from those books, but unfortunately due to high school I was unable to carry on.</p>
+		    <p>I started coding when I picked up books from my local library on coding.  I learnt basic HTML, BASIC and C++ from those books, but unfortunately due to high school I was unable to carry on. While studying Math in college I managed to get into a Python class and rest is history.</p>
+		    <p>These days I teach programming to people as a Codecademy Adviser- most of my work is with JavaScript, Angular and Python.  I play with Node in my spare time, and am currently looking for a fultime position. You can find my printable resume above.  </p>
+
 		    </div>
 	    </div>
     <script src=
