fixed the about meto scroll down to the about me section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	  <div ng-show="!main.front" ng-include="'./dist/views/landing.html'">
   </div>
 	    </header>
-	    <div ng-show="!main.front" class="AboutMe">
+	    <div ng-show="!main.front" id="anchor{{a}}" class="AboutMe">
 		    <span class="about-me">arverma.me:~/$ whoami</span><span class="about-me-cursor"> &#9608</span> 
 		    <div class="about-me-content">
 		    <h2>Developer, person who created this website, and enjoyer of good and spicy foods</h2>
