--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	  <div ng-show="!main.front" ng-include="'./dist/views/landing.html'">
   </div>
 	    </header>
-	    <div ng-show="!main.front" id="anchor{{a}}" class="AboutMe">
+	    <div ng-show="!main.front" id="anchor" class="AboutMe">
 		    <span class="about-me">arverma.me:~/$ whoami</span><span class="about-me-cursor"> &#9608</span> 
 		    <div class="about-me-content">
 		    <h2>Developer, person who created this website, and enjoyer of good and spicy foods</h2>
@@ -51,6 +51,58 @@
 		    <p>I started coding when I picked up books from my local library on coding.  I learnt basic HTML, BASIC and C++ from those books, but unfortunately due to high school I was unable to carry on. While studying Math in college I managed to get into a Python class and rest is history.</p>
 		    <p>These days I teach programming to people as a Codecademy Adviser- most of my work is with JavaScript, Angular and Python.  I play with Node in my spare time, and am currently looking for a fultime position. You can find my printable resume above.  </p>
 
+		    </div>
+		    <br /> 
+		    <span class="about-me">averma.me:~/$ ls skills </span><span class="about-me-cursor"> &#9608</span>
+		    <div class="skills">
+			    <div class="header-row"><h3>Languages</h3></div>
+			    <div class="skills-row">
+				    <div class="skill-column">
+					    JavaScript/ES6
+				    </div>
+				    <div class="skill-column">
+					    Python
+				    </div>
+				    <div class="skill-column">
+					   C++ 
+				    </div>
+			    </div>
+			    <div class="header-row"><h3>Frontend</h3></div>
+			    <div class="skills-row">
+				    <div class="skill-column">
+					    HTML5
+				    </div>
+				    <div class="skill-column">
+					    JQuery
+				    </div>
+				    <div class="skill-column">
+					    Angular
+				    </div>
+			    </div> 
+
+			    <div class="skills-row">
+				    <div class="skill-column">
+					    CSS3
+				    </div>
+				    <div class="skill-column">
+					    SASS
+				    </div>
+				    <div class="skill-column">
+					    Bootstrap
+				    </div>
+			    </div>
+			    <div class="header-row"><h3>Backend</h3></div>
+			    <div class="skills-row">
+				    <div class="skill-column">
+					    Flask
+				    </div>
+				    <div class="skill-column">
+					    Node.js
+				    </div>
+				    <div class="skill-column">
+					    SQL
+				    </div>
+			    </div> 
 		    </div>
 	    </div>
     <script src=
