--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
   </div>
 	    </header>
 	    <div ng-show="!main.front" id="anchor" class="AboutMe">
-		    <span class="about-me">arverma.me:~/$ whoami</span><span class="about-me-cursor" ng-show="screenSize"> &#9608</span> 
+		    <span class="about-me">arverma.me:~/$ whoami</span><span class="about-me-cursor" ng-show="!screenSize"> &#9608</span> 
 		    <div class="about-me-content">
 			    <span ng-show="!screenSize"><h2>Akshay Verma</h2></span>
 			    <h2>Developer, person who created this website, and enjoyer of good and spicy foods</h2>
 		    <p>*Occasional long distance runner, reader, and avid scifi fan<p>
 		    <br />
-		    <p>I started coding when I picked up books from my local library on coding.  I learnt basic HTML, BASIC and C++ from those books. While studying Math in college I managed to get into a Python class and rest is history.</p>
+		    <p>I started coding when I picked up books from my local library on coding.  I learned basic HTML, BASIC and C++ from those books. While studying Math in college I managed to get into a Python class and the rest is history.</p>
 		    <p>These days I teach programming to people as a Codecademy Adviser- most of my work is with JavaScript, Angular and Python.  I play with Node in my spare time, and am currently looking for a fultime position. You can find my printable resume <a href="./dist/views/resume.pdf">here</a>.  </p>
 
 		    </div>
 		    <br /> 
-		    <span class="about-me">averma.me:~/$ ls skills </span><span class="about-me-cursor"> &#9608</span>
+		    <span class="about-me">averma.me:~/$ ls skills </span><span class="about-me-cursor" ng-show="!screenSize"> &#9608</span>
 		    <div class="skills">
 			    <div class="header-row"><h3>Languages</h3></div>
 			    <div class="skills-row">
@@ -105,6 +105,9 @@
 				    </div>
 			    </div> 
 		    </div>
+		    
+		    <span class="about-me">averma.me:~/$ cat portfolio </span><span class="about-me-cursor"> &#9608</span>
+		    <h2>View my projects and other coding work in my github <a ng-href="http://github.com/arvvvs">here</a>
 	    </div>
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
