--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		    <p>*Occasional long distance runner, reader, and avid scifi fan<p>
 		    <br />
 		    <p>I started coding when I picked up books from my local library on coding.  I learned basic HTML, BASIC and C++ from those books. While studying Math in college I managed to get into a Python class and the rest is history.</p>
-		    <p>These days I teach programming to people as a Codecademy Adviser- most of my work is with JavaScript, Angular and Python.  I play with Node in my spare time, and am currently looking for a fultime position. You can find my printable resume <a href="./dist/views/resume.pdf">here</a>.  </p>
+		    <p>These days I teach programming to people as a Codecademy Adviser- most of my work is with JavaScript, Angular and Python.  I play with Node in my spare time, and am currently looking for a fulltime position. You can find my printable resume <a href="./dist/views/resume.pdf">here</a>.  </p>
 
 		    </div>
 		    <br /> 
