--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="" name="description">
     <meta content="theme-color" content="#000000">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Personal Webpage of Akshay Verma</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel=
     "stylesheet">
@@ -21,7 +22,8 @@
     <!--<link href=
     "https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.1/angular-material.min.css"
     rel="stylesheet">--> 
-    <link href="./assets/app.css" rel="stylesheet">
+    <!--<link href="./assets/app.css" rel="stylesheet">-->
+    <link href="./assets/global.css" rel="stylesheet">
     <body ng-cloak="" ng-controller="mainController as main">
 	    <header>
 	    <div ng-show="main.front" class="hide-typing header">
