--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="" name="description">
     <meta content="theme-color" content="#000000">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--	<meta name="viewport" content="width=device-width, initial-scale=1">
+-->
     <title>The Personal Webpage of Akshay Verma</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel=
     "stylesheet">
