--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="" name="description">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta content="theme-color" content="#000000">
     <title>The Personal Webpage of Akshay Verma</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel=
